add Save Event functionality

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="form-floating">
               <select class="form-select seconadry-nav-select" id="inputCatagorySelect" aria-label="Default select example">
-                <option value="1" selected>All Catagories</option>
+                <option value="1" selected>Select a catagory</option>
                 <option value="2">Meeting</option>
                 <option value="3">Personal</option>
                 <option value="4">Work</option>
@@ -66,12 +66,12 @@
               <label for="inputLocation" class="fw-bold">Location</label>
             </div>
             <div class="form-floating">
-              <textarea name="inputDescription" id="inputDescription" class="form-control seconadry-nav-select h-75" placeholder="desc"></textarea>
+              <textarea name="inputDescription" id="inputDescription" class="form-control seconadry-nav-select" placeholder="desc"></textarea>
               <label for="inputDescription" class="fw-bold">Description</label>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Save</button>
+            <button type="button" class="btn btn-primary" id="save-event-data">Save</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
           </div>
         </div>
