--- a/index.html
+++ b/index.html
@@ -119,13 +119,14 @@
           <option value="3">This Month</option>
         </select>
       </nav>
-      <swiper-container class="mySwiper h-100 w-100 p-3 bg-white shadow-custom rounded-2" init="false" id="viewSwiper">
+      <!-- <swiper-container class="mySwiper h-100 w-100 p-3 bg-white shadow-custom rounded-2" init="false" id="viewSwiper">
         <swiper-slide class="text-center fs-4 bg-white d-flex justify-content-center align-items-center">
-          <div id="calendar"></div>
+          
         </swiper-slide>
         <swiper-slide class="text-center fs-4 bg-white d-flex justify-content-center align-items-center">Slide
           2</swiper-slide>
-      </swiper-container>
+      </swiper-container> -->
+      <div id="calendar"></div>
     </div>
   </div>
   <script src="./Assets/styles/bootstrap-5.3.5-dist/js/bootstrap.bundle.js"></script>
