add event edit and add event delete functionality

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Edit</button>
-            <button type="button" class="btn btn-danger">Delete</button>
+            <button type="button" class="btn btn-primary edit-event">Edit</button>
+            <button type="button" class="btn btn-danger delete-event">Delete</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
           </div>
         </div>
@@ -189,9 +189,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           <option value="3">This Month</option>
         </select>
       </nav>
-      <!-- <section class="bg-white shadow-custom rounded-2 p-3">
-        <div id="calendar"></div>
-      </section> -->
       <section id="main-slider" class="splide bg-white shadow-custom rounded-2 p-3">
         <div class="splide__track">
           <ul class="splide__list">
