add filter by catagory and view

--- a/index.html
+++ b/index.html
@@ -176,17 +176,17 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
         class="navbar bg-white shadow-custom p-3 rounded-2 secondary-nav d-flex gap-3 justify-content-center align-items-center">
         <input type="text" placeholder="Search Events..."
           class="ps-3 rounded w-100 flex-grow-1 form-control seconadry-nav-select" id="searchEvent" name="searchEvent">
-        <select class="form-select seconadry-nav-select" id="CatagorieSelect" aria-label="Default select example">
+        <select class="form-select seconadry-nav-select" id="CatagorieSelect" aria-label="Default select example" style="cursor: pointer;">
           <option value="1" selected>All Catagories</option>
           <option value="2">Meeting</option>
           <option value="3">Personal</option>
           <option value="4">Work</option>
           <option value="5">Holiday</option>
         </select>
-        <select class="form-select  seconadry-nav-select" id=TimeSelect aria-label="Default select example">
-          <option value="1" selected>Today</option>
+        <select class="form-select  seconadry-nav-select" id="TimeSelect" aria-label="Default select example" style="cursor: pointer;">
+          <option value="1" selected>This Month</option>
           <option value="2">This Week</option>
-          <option value="3">This Month</option>
+          <option value="3">Today</option>
         </select>
       </nav>
       <section id="main-slider" class="splide bg-white shadow-custom rounded-2 p-3">
