--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
     <div class="container d-flex flex-column mt-4 gap-4">
       <nav
         class="navbar bg-white shadow-custom p-3 rounded-2 secondary-nav d-flex gap-3 justify-content-center align-items-center">
-        <input type="text" placeholder="Search Events..."
+        <input type="text" placeholder="Search Events by title..."
           class="ps-3 rounded w-100 flex-grow-1 form-control seconadry-nav-select" id="searchEvent" name="searchEvent">
         <select class="form-select seconadry-nav-select" id="CatagorieSelect" aria-label="Default select example" style="cursor: pointer;">
           <option value="1" selected>All Catagories</option>
