--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
     src="https://cdn.jsdelivr.net/npm/jquery-ui-timepicker-addon@1.6.3/dist/jquery-ui-timepicker-addon.min.js"></script>
   <link rel="stylesheet" href="https://cdn.datatables.net/2.3.1/css/dataTables.bootstrap5.min.css">
   <script src="https://cdn.datatables.net/2.3.1/js/dataTables.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
-  <!-- <script src="https://cdn.datatables.net/plug-ins/2.3.1/sorting/datetime-moment.js"></script> -->
-   <script src="./Assets/scripts/datetime-moment.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+  <script src="./Assets/scripts/datetime-moment.js"></script> -->
   <title>Interactive Event Calendar</title>
 </head>
 
@@ -167,8 +166,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           <img src="./Assets/images/calendar.png" alt="calendar" width="35px" height="35px">
           <span class="fw-bold text-primary fs-fluid-1 ms-1 align-middle">Interactive Event Calendar</span>
         </a>
-        <button class="btn btn-primary fw-medium float-sm-end mt-2 mt-sm-0" data-bs-toggle="modal"
-          data-bs-target="#eventModal">Add New Event</button>
+        <div class="d-flex gap-2 justify-content-center align-items-center event-buttons mt-2">
+          <button class="fw-medium btn btn-primary" data-bs-toggle="modal" data-bs-target="#eventModal">Add New
+            Event</button>
+          <button class="fw-medium btn btn-danger" onclick="deleteAllEvents()">Delete All
+            Events
+          </button>
+        </div>
       </div>
     </nav>
     <div class="container d-flex flex-column mt-4 gap-4">
